// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa kaJxkr"
  >
    Click here
  </button>
</DocumentFragment>
`;

exports[`<Button /> should render a submit button 1`] = `
<DocumentFragment>
  <button
    class="sc-bdVaJa kaJxkr"
    type="submit"
  >
    Click here
  </button>
</DocumentFragment>
`;
